--- a/modules/appointment/view/preference.html
+++ b/modules/appointment/view/preference.html
@@ -20,7 +20,7 @@
     <div class="ui list selector">
         <div class="item {{car.IsDefault?'selected':''}}" ng-repeat="car in cars" ng-click="save('Car',car)">
             <div class="name">{{car.Name}}</div>
-            <div class="sub">{{car.Description}}</div>
+            <div class="sub">{{car.Description || '-'}}</div>
             <i class="icon check mark"></i>
         </div>
     </div>
@@ -32,7 +32,7 @@
     <div class="ui list selector">
         <div class="item {{store.IsDefault?'selected':''}}" ng-repeat="store in stores"  ng-click="save('Store',store)">
             <div class="name">{{store.Name}}</div>
-            <div class="sub">{{store.Description}}</div>
+            <div class="sub">{{store.Description || '-'}}</div>
             <i class="icon check mark"></i>
         </div>
     </div>
