--- a/modules/store/view/index.html
+++ b/modules/store/view/index.html
@@ -1,7 +1,7 @@
 <div class="store">
 
-    <div class="header">
-        <i class="icon angle arrow left" ng-click="back()"></i>
+    <div class="header"  ng-show="store!=null">
+        <i class="icon angle arrow left" ng-click="path('/appointment')"></i>
         <img ng-src="{{store.StoreImage}}" title="门店照片">
 
         <div class="info">
@@ -10,17 +10,17 @@
             <coo-rating value="{{store.Rating}}"></coo-rating>
             <div class="tools">
                 <a href="tel:{{store.StorePhoneNum}}" ng-if="store.StorePhoneNum != ''"><i class="icon phone"></i></a>
-                <a><i class="icon marker"></i></a>
+                <a ng-click="shopMap()"><i class="icon marker"></i></a>
             </div>
         </div>
     </div>
-    <div class="services">
+
+    <div class="services" ng-show="store != null">
 
         <div class="time">
             <i class="icon time"></i>
             服务时间: {{store.WorkTime  || '-'}}
         </div>
-
 
         <div class="service" ng-repeat="service in store.StoreWorkPlace" ng-click="select(service)">
             <div class="ooo"></div>
@@ -33,6 +33,11 @@
 
     </div>
 
+    <div class="noStore" ng-click="init()" ng-show="isLoaded && store == null">
+        门店信息加载失败，点此重试
+    </div>
+
 </div>
 
 <coo-loader show="loaderVisible"></coo-loader>
+
