--- a/public/css/store.css
+++ b/public/css/store.css
@@ -172,6 +172,39 @@
 }
 
 
+.store .noStore{
+    text-align: center;
+    line-height: 60px;
+    font-size: 16px;
+    color:#ccc;
+}
+
+
+.storeMap{
+    position: absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    background: #f0f0f0;
+}
+
+.storeMapNav{
+    position: absolute;
+    bottom: 0;
+    left:0;
+    right:0;
+    line-height: 60px;
+    height: 60px;
+    background: rgba(0,0,0,0.8);
+    color: #fff;
+    text-align: center;
+    z-index: 999;
+    font-size: 18px;
+}
+
+
+
 @media screen and (max-width: 320px){
     .store{
         padding:216px 16px 16px 16px;
