--- a/modules/appointment/view/complete.html
+++ b/modules/appointment/view/complete.html
@@ -26,6 +26,9 @@
     </div>
 
     <div class="buttons">
+        <a class="ui button fluid orange" ng-click="shopMap()">导航至门店</a>
         <a class="ui button fluid basic" ng-click="path('/appointment')">我知道了</a>
     </div>
 </div>
+
+<coo-loader show="loaderVisible"></coo-loader>
