--- a/public/css/basic.css
+++ b/public/css/basic.css
@@ -73,11 +73,11 @@ a{
 
 .dimmer > .content > div > .title {
     display: block;
-    padding: 16px 0 ;
+    padding: 16px 0;
     font-size: 16px;
     color: #999;
-    position:absolute;
-    top:0;
+    position: absolute;
+    top: 0;
     width: 100%;
 }
 
@@ -246,5 +246,9 @@ a{
 .ratings > i.icon{
     color:#f2711c;
     margin-right:0;
+}
+
+.ratings > i.icon.empty{
+    color: #ccc;
 }
 
