--- a/modules/appointment/view/orders.html
+++ b/modules/appointment/view/orders.html
@@ -1,7 +1,7 @@
 <div class="orders page-with-title-and-tabs">
     <div class="page-header">
         <div class="tools">
-            <a ng-click="path('/appointment')">
+            <a ng-click="path('/appointment')" ng-if="isRoot==0">
                 <i class="icon angle arrow left"></i>
             </a>
         </div>
