--- a/public/css/membership.css
+++ b/public/css/membership.css
@@ -1,4 +1,29 @@
-.membership{}
+.membership{
+    padding-top: 185px;
+    padding-bottom:70px;;
+}
+
+.membership > .tools {
+    position: fixed;
+    top: 107px;
+    left: 0;
+    right: 0;
+    padding: 12px 16px;
+    background: #fcfcfc;
+    z-index:999;
+}
+
+.paycodenum{
+    font-size: 48px;
+    display: block;
+    text-align: center;
+    line-height: 48px;
+}
+
+.paycodenum>span{
+    display: block;
+    font-size:14px;
+}
 
 .membership > .page-header > img{
     position: absolute;
@@ -7,7 +32,7 @@
 
     height:80px;
 }
-.membership > .message{
+.membership > .tools > .message{
     color: #999;
 }
 .membership > .message > a{
@@ -89,7 +114,7 @@
 
 
 .membership > .pay{
-    position: absolute;
+    position: fixed;
     left:0px;
     bottom: 0px;
     right: 0px;
@@ -306,3 +331,24 @@
     color: #ccc;
 }
 
+
+
+.paycode > .service{
+    padding: 30px 0;
+    line-height: 16px;
+    font-size: 14px;
+}
+
+.paycode > .code{
+    padding: 30px 0;
+    line-height: 16px;
+    font-size: 16px;
+    color: #1aa586;
+}
+
+.paycode > .expireTime {
+    padding: 20px 0;
+    line-height: 16px;
+    font-size: 14px;
+    color: #999;
+}
