--- a/modules/appointment/view/index.html
+++ b/modules/appointment/view/index.html
@@ -100,7 +100,7 @@
     <coo-loader show="loaderVisible"></coo-loader>
 
 
-    <img class="poweredby" src="public/images/poweredby.png">
+    <img class="poweredby" src="public/images/poweredby.png" ng-click="intro()">
 </div>
 
 
