--- a/modules/appointment/view/orders.html
+++ b/modules/appointment/view/orders.html
@@ -14,7 +14,7 @@
     </div>
     <div class="page-tabs">
         <div class="ui green secondary pointing menu five item ">
-            <a class="item {{$index == category?'active':''}}" ng-repeat="(key,value) in categories" ng-click="categorySelect($index)">{{value.label}}</a>
+            <a class="item {{value.data == category?'active':''}}" ng-repeat="(key,value) in categories" ng-click="categorySelect(value.data)">{{value.label}}</a>
         </div>
     </div>
 
@@ -27,11 +27,11 @@
         <div class="order-list">
             <div class="orderDetail" ng-repeat="appointment in item.Appointments" ng-click="detail(appointment)">
                 <img ng-src="{{appointment.StoreImage}}">
-                <div class="appointment">{{appointment.AppointmentType}}</div>
+                <div class="appointment">{{appointment.RemarkOfCustomer}}</div>
                 <div class="carNum">{{appointment.CarNum}}</div>
                 <div class="storeName">{{appointment.StoreName}}</div>
                 <div class="date">{{appointment.TimeOfWeek}} ({{appointment.AccurateStartTime}})</div>
-                <span class="status ui left ribbon label  {{categories[categoryLabels.indexOf(appointment.Status)].color}}">{{appointment.Status}}</span>
+                <span class="status ui left ribbon label {{categoryLabels[appointment.Status] || 'blue'}}">{{appointment.Status}}</span>
 
                 <div class="cancel" ng-if="appointment.Status == '未完成'" ng-click="toCancel(appointment)">取消预约</div>
             </div>
